--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Learning JS</h1>
 
-<a href="lesson_1/index.html">Lesson 1</a>
+<a href="lesson_1/index.html">Lesson 1</a><br>
+<a href="lesson_2/index.html">Lesson 2</a><br>
