--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 
 <a href="lesson_1/index.html">Lesson 1</a><br>
 <a href="lesson_2/index.html">Lesson 2</a><br>
+<a href="lesson_3/index.html">Lesson 3</a><br>
