Lesson 4 Data type

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <a href="lesson_1/index.html">Lesson 1</a><br>
 <a href="lesson_2/index.html">Lesson 2</a><br>
 <a href="lesson_3/index.html">Lesson 3</a><br>
+<a href="lesson_4/index.html">Lesson 4</a><br>
