--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@
 <a href="lesson_2/index.html">Lesson 2</a><br>
 <a href="lesson_3/index.html">Lesson 3</a><br>
 <a href="lesson_4/index.html">Lesson 4</a><br>
+<a href="lesson_5/index.html">Lesson 5</a><br>
