--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@
 <a href="lesson_3/index.html">Lesson 3</a><br>
 <a href="lesson_4/index.html">Lesson 4</a><br>
 <a href="lesson_5/index.html">Lesson 5</a><br>
+<a href="lesson_6/index.html">Lesson 6</a><br>
