--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@
 <a href="lesson_5/index.html">Lesson 5</a><br>
 <a href="lesson_6/index.html">Lesson 6</a><br>
 <a href="lesson_7/index.html">Lesson 7</a><br>
+<a href="lesson_8/index.html">Lesson 8</a><br>
