--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@
 <a href="lesson_6/index.html">Lesson 6</a><br>
 <a href="lesson_7/index.html">Lesson 7</a><br>
 <a href="lesson_8/index.html">Lesson 8</a><br>
+<a href="lesson_9/index.html">Lesson 9</a><br>
