--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@
 <a href="lesson_8/index.html">Lesson 8</a><br>
 <a href="lesson_9/index.html">Lesson 9</a><br>
 <a href="lesson_10/index.html">Lesson 10</a><br>
+<a href="lesson_11/index.html">Lesson 11</a><br>
