--- a/index.html
+++ b/index.html
@@ -11,3 +11,4 @@
 <a href="lesson_9/index.html">Lesson 9</a><br>
 <a href="lesson_10/index.html">Lesson 10</a><br>
 <a href="lesson_11/index.html">Lesson 11</a><br>
+<a href="lesson_12/index.html">Lesson 12</a><br>
